--- a/C Make files/Makefile_sound
+++ b/C Make files/Makefile_sound
@@ -5,7 +5,7 @@
 
 
 # Change this to the location where the cross compiler was placed.
-PREFIX = ~/bcc/bos/sysroot/bin
+PREFIX = ~/bcc/bos2/sysroot/bin
 
 # Change this to the name of your application.
 NAME = s
